<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="pos"
            type="int"
            />
        <variable
            name="question"
            type="com.onurkanbakirci.szutestosgb.data.db.entities.Question" />
        <variable
            name="questionsViewModel"
            type="com.onurkanbakirci.szutestosgb.ui.fragments.QuestionsViewModel" />
    </data>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/shadow_effect"
            android:layout_width="match_parent"
            android:alpha="@{questionsViewModel.alpha}"
            android:layout_marginHorizontal="@dimen/inp_horizontal"
            android:layout_marginVertical="@dimen/inp_vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/radio_bck"
                android:orientation="horizontal"
                >
                <TextView
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:text="@{question.category_name}"
                    android:id="@+id/expandableTitle"
                    />
                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:onClick="@{(view)->questionsViewModel.saveAnswer(view,question,radioBtnGroup,commentLine,pos)}"
                    android:background="@drawable/ic_check"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:padding="@dimen/inp_horizontal"
                android:textColor="@color/black"
                android:text="@{question.description}"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/radioBtnGroup"
                >
                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:background="@drawable/radio_bck"
                    android:checked="false"
                    android:clickable="@{questionsViewModel.radioBtnisClickable}"
                    />
                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:background="@drawable/radio_bck"
                    android:checked="false"
                    android:clickable="@{questionsViewModel.radioBtnisClickable}"
                    />
                <RadioButton
                    android:id="@+id/noValid"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/noValid"
                    android:background="@drawable/radio_bck"
                    android:checked="false"
                    android:clickable="@{questionsViewModel.radioBtnisClickable}"
                    />
            </RadioGroup>
            <EditText
                android:id="@+id/commentLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"
                android:background="@drawable/radio_bck"
                android:hint="@string/comment"
                android:gravity="start"
                android:padding="10dp"
                android:maxLines="1"
                android:maxLength="20"
                android:textSize="15dp"
                />
        </LinearLayout>

</layout>