<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginViewModel"
            type="com.onurkanbakirci.szutestosgb.ui.activities.LoginActivityViewModel" />
    </data>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".ui.activities.LoginActivity">
        <LinearLayout
            android:id="@+id/credentialsField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/szutestsplashimage"
                />
            <EditText
                android:id="@+id/mEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/inp_horizontal"
                android:layout_marginVertical="@dimen/inp_horizontal"
                android:hint="@string/userNameField"
                android:drawablePadding="@dimen/inp_horizontal"
                android:drawableLeft="@drawable/ic_account"
                android:paddingHorizontal="@dimen/inp_horizontal"
                android:background="@drawable/inp_bck"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/inp_horizontal"
                android:layout_marginVertical="@dimen/inp_horizontal"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="@dimen/inp_horizontal"
                android:inputType="textPassword"
                android:hint="@string/passwordField"
                android:paddingLeft="@dimen/inp_horizontal"
                android:background="@drawable/inp_bck"
                />
            <LinearLayout
                android:id="@+id/btnLog"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:onClick="@{(v)->loginViewModel.loginClick(v,mEmail,mPassword)}"
                    android:id="@+id/lgnBtnLogin"
                    android:layout_width="300dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginHorizontal="@dimen/inp_horizontal"
                    android:background="@color/white"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
            <ProgressBar
                android:visibility="@{loginViewModel.loginProgress}"
                android:id="@+id/loginPageProgress"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>