<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="pcrFormFragmentViewModel"
            type="com.onurkanbakirci.szutestosgb.ui.fragments.PCRFormFragmentViewModel" />
    </data>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:maxLength="20"
                android:singleLine="true"
                android:id="@+id/name"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                android:hint="İsim"
                />
            <EditText
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:singleLine="true"
                android:maxLength="20"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/surname"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:hint="Soyisim"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                />
            <EditText
                android:singleLine="true"
                android:maxLength="11"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/identity_number"
                android:layout_width="match_parent"
                android:hint="T.C. / Pasaport "
                android:inputType="number"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                />
            <EditText
                android:singleLine="true"
                android:maxLength="50"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/firmName"
                android:layout_width="match_parent"
                android:hint="Kurum İsmi "
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                />
            <EditText
                android:singleLine="true"
                android:maxLength="10"
                android:id="@+id/bornDate"
                android:paddingLeft="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:hint="Doğum Tarihi"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                android:afterTextChanged="@{(text) -> pcrFormFragmentViewModel.textChanges(text)}"
                />
            <EditText
                android:inputType="textCapCharacters"
                android:id="@+id/address"
                android:maxLength="255"
                android:maxLines="4"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:hint="Adres"
                android:paddingLeft="10dp"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="100dp"
                />
            <EditText
                android:singleLine="true"
                android:maxLength="11"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/phoneNumber"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:hint="Telefon Numarası"
                android:inputType="phone"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                />
            <RadioGroup
                android:id="@+id/anticor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                >
                <RadioButton
                    android:id="@+id/pcr"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/pcr"
                    android:background="@drawable/shadow_effect"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/anti"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/anticor"
                    android:background="@drawable/shadow_effect"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/pcr_and_anticor"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/pcr_anticor"
                    android:background="@drawable/shadow_effect"
                    android:checked="false"
                    />
            </RadioGroup>
            <EditText
                android:inputType="textCapCharacters"
                android:id="@+id/foreign"
                android:singleLine="true"
                android:maxLength="20"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:hint="Yurt Dışı"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                />
            <EditText
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:maxLength="20"
                android:id="@+id/nationality"
                android:paddingLeft="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:hint="Uyruk"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                />
            <EditText
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:maxLength="20"
                android:id="@+id/flightInf"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:hint="Uçuk Bilgileri"
                android:background="@drawable/shadow_effect"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                />
        </LinearLayout>
        </ScrollView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:onClick="@{(view)->pcrFormFragmentViewModel.savePCR(view,name,surname,firmName,identityNumber,bornDate,address,phoneNumber,anticor,foreign,nationality,flightInf)}"
                android:id="@+id/finishFormBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="@dimen/inp_horizontal"
                android:layout_marginVertical="@dimen/inp_vertical"
                android:src="@drawable/ic_check"
                android:backgroundTint="@color/white"
                />
    </RelativeLayout>
</layout>